--- a/.classpath
+++ b/.classpath
@@ -27,5 +27,6 @@
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry exported="true" kind="lib" path="C:/Program Files/Java/jdk1.8.0_161/lib/tools.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
